scripts/nullaway/annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8.txt
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Catalog.java:20: error: [NullAway] initializer method does not guarantee @NonNull field headBlock (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  private MiniDB_Catalog(MiniDB miniDB){
          ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Block.java:48: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.miniDB = miniDB;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields dbBlocks (line 11), dbBlockUsed (line 12), catalog (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public MiniDB(String dbName){
         ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:19: error: [NullAway] @NonNull static field bufMgr not initialized
  public static BufMgr bufMgr;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:175: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return bpt;
    ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTree.java:24: error: [NullAway] initializer method does not guarantee @NonNull fields headBlock (line 15), rootNode (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public BPlusTree(MiniDB db){this.miniDB = db;};
         ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTree.java:197: error: [NullAway] dereferenced expression rightNode is @Nullable
	if( nextValueToInsert >= rightNode.getMinValue() ){
	                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Ex2.java:12: error: [NullAway] dereferenced expression bpt2 is @Nullable
      bpt2.insertRecord(1,2); 
          ^
    (see http://t.uber.com/nullaway )
../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample4.java:104: error: [NullAway] dereferenced expression bpt is @Nullable
	bpt.printAllRecords();
	   ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Record.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
